<resources>
    <string name="app_name">Crossword Toolkit</string>
    <string name="dictionary_mw_api_key">9e0d1e91-7967-448d-8779-41f8b964be2a</string>
    <string name="dictionary_thesaurus_mw_api_key">266343c3-4966-44d0-9158-0cc13ae2faf3</string>
    <string name="dictionary_error">An error occurred with the search. Please try again.</string>
    <string name="dictionary_word_not_found">Word not found.</string>
    <string name="dictionary_suggestions_prompt">Touch here to show suggested words.</string>
    <string name="dictionary_suggestions">Suggested words:</string>
    <string name="dictionary_search_google">Touch here to search Google...</string>
    <string name="dictionary_internet_connection_required">Please check you are connected to the internet before searching.</string>
    <string name="wiki_url">"https://en.wikipedia.org/wiki/Crossword_abbreviations"</string>
    <string name="email_target">thonners.android@gmail.com</string>
    <string name="email_subject">CrosswordToolkit Feedback</string>
    <string name="email_body">Please enter your feedback below.\n\nIf you wish to report an error or bug, please include details of your phone, such as android version, manufacturer and model. Thanks.\n\n-------------------------------------------------\n\n</string>
    <string name="email_type">"message/rfc822"</string>
    <string name="email_error">There appear to be no email clients installed.</string>
    <string name="about_title">About</string>
    <string name="about_text">Crossword Toolkit provides a means of saving and solving crosswords digitally.\nDictionary lookup is from Merriam-Webster.\nThe anagram solver and word-fit tools were scripted by the developer, using the standard Linux word list.\n\nCreated by Thonners 2015</string>
    <string name="about_dismiss">Close</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Are you sure you want to delete this crossword\?</string>
    <string name="edit_delete_tutorial">Long-click a crossword to bring up the edit button.\nYou can delete a crossword from within the edit facility.</string>
    <string name="edit_warning_toast">Warning, saving a new grid will overwrite previous progress.</string>
    <string name="action_instructions">Instructions</string>
    <string name="action_edit">Edit Grid</string>
    <string name="action_edit_delete">"Edit/Delete Crossword"</string>
    <string name="action_retake">Retake Clues Picture</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_zoom_in">Zoom In</string>
    <string name="action_zoom_out">Zoom Out</string>
    <string name="home_old">Old Crosswords</string>
    <string name="server_available_toast">CrosswordToolkit server connection available</string>
    <string name="sdcard_error_1">Sorry, no external storage found.\nThis required for saving new crosswords, so functionality is limited to the toolkit.</string>
    <string name="home_new">New Crossword</string>
    <string name="home_new2">Save a new crossword</string>
    <string name="home_toolkit">Crossword Toolkit</string>
    <string name="home_toolkit2">Dictionary, Anagram and Word-fit</string>
    <string name="home_recent">Recent Crosswords</string>
    <string name="home_recent2">Click a crossword below to resume</string>
    <string name="home_recent_none1">No recent crosswords.</string>
    <string name="home_recent_none2">Click \'Save a new crossword\' above to get started!</string>
    <string name="home_library">Saved Crosswords</string>
    <string name="home_library2">Access all your saved crosswords</string>
    <string name="home_settings">Settings</string>
    <string name="home_settings2">Change your preferences</string>
    <string name="low_ram_snackbar">There\'s an option in the \'Settings\' menu for low RAM devices. Try this if you are experiencing crashes.</string>
    <string name="title_activity_toolkit">Crossword Toolkit</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="already_searching">Already Searching.\nPlease wait for this search to complete before searching again.</string>
    <string name="searching">Searching...</string>
    <string name="loading">Loading...</string>
    <string name="shuffle">Shuffle</string>
    <string name="completion">Completion:</string>
    <string name="no_match_found">Sorry. No match found.</string>
    <string name="illegalCharacterToast">Ignoring illegal input.\nOnly letters and \'.\' allowed in input\!</string>
    <string name="clear">Clear</string>
    <string name="anagram_prompt">Enter letters for anagram:\nTo use \'word-fit\', use \'.\' for unknown letters:</string>
    <string name="anagram_low_ram_no_server_error">Server connection required when in low RAM mode.\n\nPlease try again when you have an active internet connection.</string>
    <string name="manual_anagram_prompt">Enter letters for anagram:\nHit \'Shuffle\' below to randomise letters:\nMore instructions available via the menu.</string>
    <string name="dictionary_prompt">Enter word to search:</string>
    <string name="instructions">Instructions</string>
    <string name="snackbar_instructions">Instructions for using the manual anagram tool are available via the menu.</string>
    <string name="snackbar_show">SHOW</string>
    <string name="manual_anagram_instructions">To manually solve an anagram:\n\nEnter the letters in the search box and hit \'shuffle\'.\n\nIf letter positions are known, touch the relevant tile at the base of the screen followed by the known letter.\n\nTo clear a letter from a tile, long press the tile.</string>
    <string name="close">Close</string>
    <string name="title_activity_new_crossword">New Crossword</string>
    <string name="title_activity_crossword_grid_editor">Grid Editor</string>
    <string name="new_crossword_prompt_top"> Enter the number of rows and columns in your crossword:</string>
    <string name="new_crossword_prompt_grid_generation">Choose how to create the grid:</string>
    <string name="new_crossword_auto_enter">Automatically from picture</string>
    <string name="new_crossword_manual_enter">Manually</string>
    <string name="new_crossword_enter">Enter</string>
    <string name="title_activity_grid_maker">Grid Maker</string>
    <string name="title_activity_crossword">Crossword Activity</string>
    <string name="default_crossword_title">Crossword</string>
    <string name="title_activity_saved_crossword_selector">Select crossword to load</string>
    <string name="saved_file_selection_prompt">Select crossword to load:</string>
    <string name="crossword_title_input_hint">Enter the crossword publication...</string>
    <string name="crossword_date_input_hint">Enter the crossword date...</string>
    <string name="take_clue_picture_prompt">Click here to take a picture of the clues</string>
    <string name="take_clue_picture_error">Sorry, no camera device found.\nThis is required to take a picture of the clues.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="pub_name_dialog_title">Select the publication</string>
    <string name="pub_name_other_dialog_title">Enter the publication name:</string>
    <string name="pub_date_dialog_title">Select the date</string>
    <string name="pub_other">Other</string>
    <string name="dialog_overwrite">OVERWRITE</string>
    <string name="dialog_rotate">ROTATE</string>
    <string name="dialog_overwrite_crossword_message">A save file for this crossword already exists.\nDo you wish to overwrite it\?</string>
    <string name="dialog_overwrite_clue_image_message">Retake or rotate picture? This will overwrite the existing clue image\?</string>
    <string name="error_crossword_date">Unknown Date</string>
    <string name="tutorial_toast_grid_maker">Make your crossword grid.\nTouch the cells to toggle a \'black cell\'.\nClick the button below when you\'re done</string>
    <string name="tutorial_toast_auto_grid_top_left"> Touch the top left corner of the crossword grid.</string>
    <string name="tutorial_toast_auto_grid_bottom_right"> Now touch the bottom right corner of the crossword grid.</string>
    <string name="tutorial_toast_auto_grid_check"> Check that the generated grid is correct, then hit Enter.</string>
    <string name="tutorial_toast_dictionary">Enter a word to look up in the search box</string>
    <string name="title_activity_crosword_slider">CroswordSliderActivity</string>
    <string name="tutorial_snackbar_message">Full instructions available via the menu.</string>
    <string name="show">SHOW</string>
    <string name="across"><u>Across:</u></string>
    <string name="down"><u>Down:</u></string>
    <string name="dialog_save_title">Save Progress\?</string>
    <string name="dialog_save_message">Changes detected since last save.\nSave recent progress\?</string>
    <string name="dialog_save_save">SAVE</string>
    <string name="dialog_save_dont_save">DON\'T SAVE</string>
    <string name="victory_title">Congratulations\!</string>
    <string name="victory_message">You\'ve completed this crossword\!</string>
    <string name="victory_yes">DONE</string>
    <string name="rate_title">Rate Crossword Toolkit</string>
    <string name="rate_message">If you enjoy using Crossword Toolkit, please take a moment to rate it on the Play Store.\n\nDoing so would be greatly appreciated by the developer!\n\nThanks</string>
    <string name="rate_yes">RATE</string>
    <string name="rate_never">NO, THANKS</string>
    <string name="rate_later">MAYBE LATER</string>
    <string name="pref_crossword_group_title">New Crosswords</string>
    <string name="pref_general_group_title">General</string>
    <string name="pref_auto_save_title">Auto-save</string>
    <string name="pref_auto_save_summ">Automatically save progress when leaving crossword activity</string>
    <string name="pref_victory_popup_title">Victory Popup</string>
    <string name="pref_victory_popup_summ">Display popup when crossword completed</string>
    <string name="pref_low_ram">Low RAM</string>
    <string name="pref_low_ram_summ">Enable this setting if you\'re experiencing crashes</string>
    <string name="pref_cloud_sync">Cloud sync</string>
    <string name="pref_cloud_sync_summ">Save progress to the cloud (Coming soon\!)</string>
    <string name="pref_autogrid">Automatic Grid Generation</string>
    <string name="pref_autogrid_summ">Enable automatic grid generation from a picture. (Beta coming soon\!)</string>
    <string name="pref_no_columns_title">Default Column Count</string>
    <string name="pref_no_columns_summ">Set the default number of columns for a new crossword</string>
    <string name="pref_default_publications_title">Default Publications</string>
    <string name="pref_default_crosswords_list_summ">Edit the list of default publications for a new crossword</string>
    <string name="pref_offline">Disable server connection</string>
    <string name="pref_offline_summ">Prevent connections to the CrosswordToolkit Servers</string>
</resources>