<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_crossword_group_title"
        android:key="pref_crossword_group_settings">

        <EditTextPreference
            android:key="pref_no_columns"
            android:title="@string/pref_no_columns_title"
            android:summary="@string/pref_no_columns_summ"
            android:defaultValue="13"
            android:inputType="number" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_general_group_title"
        android:key="pref_general_group_settings">
        <CheckBoxPreference
            android:key="pref_auto_save"
            android:title="@string/pref_auto_save_title"
            android:summary="@string/pref_auto_save_summ"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="pref_victory_popup"
            android:title="@string/pref_victory_popup_title"
            android:summary="@string/pref_victory_popup_summ"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="pref_offline_mode"
            android:title="@string/pref_offline"
            android:summary="@string/pref_offline_summ"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_low_ram"
            android:title="@string/pref_low_ram"
            android:summary="@string/pref_low_ram_summ"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_cloud_sync"
            android:title="@string/pref_cloud_sync"
            android:summary="@string/pref_cloud_sync_summ"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_autogrid"
            android:title="@string/pref_autogrid"
            android:summary="@string/pref_autogrid_summ"
            android:defaultValue="false" />

    </PreferenceCategory>
</PreferenceScreen>