<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thonners.crosswordmaker.SavedCrosswordSelector">

    <item android:id="@+id/action_edit_delete"
        android:title="@string/action_edit_delete"
        android:orderInCategory="20"
        app:showAsAction="never" />


    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        android:orderInCategory="150"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="200"
        app:showAsAction="never" />
</menu>
