<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thonners.crosswordmaker.CrosswordSliderActivity">

    <item android:id="@+id/action_instructions"
        android:title="@string/action_instructions"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:orderInCategory="40"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        android:orderInCategory="150"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="200"
        app:showAsAction="never" />


</menu>