<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_main_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_card_toolkit"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/home_card_margin"
        android:layout_marginLeft="@dimen/home_card_margin"
        android:layout_marginRight="@dimen/home_card_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="toolkitClicked"
            android:padding="@dimen/home_card_padding">
            <TextView
                android:id="@+id/toolkit_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_toolkit"
                android:textSize="@dimen/home_card_text_size_main"
                android:textStyle="bold"
                android:textColor="@color/text_default"
                android:layout_alignParentTop="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_toolkit2"
                android:textSize="@dimen/home_card_text_size_minor"
                android:textStyle="normal"
                android:textColor="@color/text_default"
                android:layout_below="@+id/toolkit_tv1"/>
            <ImageView
                android:layout_width="@dimen/home_card_icon_size"
                android:layout_height="@dimen/home_card_icon_size"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_tools"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_card_new"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/home_card_margin"
        android:layout_marginLeft="@dimen/home_card_margin"
        android:layout_marginRight="@dimen/home_card_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="newClicked"
            android:padding="@dimen/home_card_padding">
            <TextView
                android:id="@+id/home_card_new_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_new"
                android:textSize="@dimen/home_card_text_size_main"
                android:textStyle="bold"
                android:textColor="@color/text_default"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/home_card_new_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_new2"
                android:textSize="@dimen/home_card_text_size_minor"
                android:textStyle="normal"
                android:textColor="@color/text_default"
                android:layout_below="@+id/home_card_new_tv1"/>
            <ImageView
                android:layout_width="@dimen/home_card_icon_size"
                android:layout_height="@dimen/home_card_icon_size"
                android:layout_alignParentRight="true"
                android:src="@drawable/home_new"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_card_recent"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/home_card_margin"
        android:layout_marginLeft="@dimen/home_card_margin"
        android:layout_marginRight="@dimen/home_card_margin">

        <RelativeLayout
        android:id="@+id/home_card_recent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/home_card_padding">
            <ImageView
                android:id="@+id/home_recent_icon"
                android:layout_width="@dimen/home_card_icon_size"
                android:layout_height="@dimen/home_card_icon_size"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/home_recent"/>

            <TextView
                android:id="@+id/home_recent_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_recent"
                android:textSize="@dimen/home_card_text_size_main"
                android:layout_alignParentTop="true"
                android:textStyle="bold"
                android:textColor="@color/text_default"
                />
            <TextView
                android:id="@+id/home_recent_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_recent2"
                android:textSize="@dimen/home_card_text_size_minor"
                android:textColor="@color/text_default"
                android:layout_below="@+id/home_recent_title"
                android:textStyle="normal"/>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/home_card_recent_1"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_recent_icon"
                card_view:cardCornerRadius="0dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/home_card_padding">
                    <TextView
                        android:id="@+id/home_card_recent_1_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/home_recent_none1"
                        android:textSize="@dimen/home_card_text_size_main"
                        android:textStyle="normal"
                        android:textColor="@color/text_default"/>
                    <TextView
                        android:id="@+id/home_card_recent_1_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_card_recent_1_title"
                        android:text="@string/home_recent_none2"
                        android:textSize="@dimen/home_card_text_size_minor"
                        android:textColor="@color/text_default"
                        android:textStyle="normal"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/home_card_recent_2"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_card_recent_1"
                card_view:cardCornerRadius="0dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/home_card_padding">
                    <TextView
                        android:id="@+id/home_card_recent_2_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="Crossword - 2nd most recent"
                        android:textSize="@dimen/home_card_text_size_main"
                        android:textStyle="normal"
                        android:textColor="@color/text_default"/>
                    <TextView
                        android:id="@+id/home_card_recent_2_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_card_recent_2_title"
                        android:text="22/03/12"
                        android:textSize="@dimen/home_card_text_size_minor"
                        android:textColor="@color/text_default"
                        android:textStyle="normal"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/home_card_recent_3"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_card_recent_2"
                card_view:cardCornerRadius="0dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/home_card_padding">
                    <TextView
                        android:id="@+id/home_card_recent_3_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="Crossword - 3rd most recent"
                        android:textSize="@dimen/home_card_text_size_main"
                        android:textStyle="normal"
                        android:textColor="@color/text_default"/>
                    <TextView
                        android:id="@+id/home_card_recent_3_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_card_recent_3_title"
                        android:text="26/01/15"
                        android:textSize="@dimen/home_card_text_size_minor"
                        android:textColor="@color/text_default"
                        android:textStyle="normal"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_card_library"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/home_card_margin"
        android:layout_marginLeft="@dimen/home_card_margin"
        android:layout_marginRight="@dimen/home_card_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="savedClicked"
            android:padding="@dimen/home_card_padding">
            <TextView
                android:id="@+id/home_card_saved_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/home_library"
                android:textSize="@dimen/home_card_text_size_main"
                android:textColor="@color/text_default"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/home_card_saved_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_card_saved_tv1"
                android:text="@string/home_library2"
                android:textSize="@dimen/home_card_text_size_minor"
                android:textColor="@color/text_default"
                android:textStyle="normal"/>
            <ImageView
                android:layout_width="@dimen/home_card_icon_size"
                android:layout_height="@dimen/home_card_icon_size"
                android:layout_alignParentRight="true"
                android:src="@drawable/home_new"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_card_settings"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/home_card_margin"
        android:layout_marginLeft="@dimen/home_card_margin"
        android:layout_marginRight="@dimen/home_card_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="settingsClicked"
            android:padding="@dimen/home_card_padding">
            <TextView
                android:id="@+id/home_card_settings_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_settings"
                android:textSize="@dimen/home_card_text_size_main"
                android:textColor="@color/text_default"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/home_card_settings_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_card_settings_tv1"
                android:text="@string/home_settings2"
                android:textSize="@dimen/home_card_text_size_minor"
                android:textColor="@color/text_default"
                android:textStyle="normal"/>
            <ImageView
                android:layout_width="@dimen/home_card_icon_size"
                android:layout_height="@dimen/home_card_icon_size"
                android:layout_alignParentRight="true"
                android:src="@drawable/settings"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>